--- a/css/main.css
+++ b/css/main.css
@@ -788,7 +788,7 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
     display: inline-block;
-    font-family: "montserrat-medium", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: .3rem;
@@ -1793,7 +1793,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .home-content h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: #A2AAAD;
     text-transform: uppercase;
     letter-spacing: .3rem;
     position: relative;
@@ -3381,10 +3381,10 @@ footer .row {
     padding: 0;
     outline: 0;
     border: none;
-    width: 85px;
-    height: 28px;
+    width: 176.64px;
+    height: 65.6px;
     background: url("../images/logo-footer.png") no-repeat center;
-    background-size: 85px 28px;
+    background-size: 176.64px 65.6px;
     font: 0/0 a;
     text-shadow: none;
     color: transparent;
