--- a/fonts/flaticon/font/flaticon.css
+++ b/fonts/flaticon/font/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 13/09/2019 01:45
+  	Creation date: 25/01/2021 09:57
   	*/
 
 @font-face {
@@ -30,9 +30,13 @@ font-style: normal;
 margin-left: 20px;
 }
 
-.flaticon-moustache:before { content: "\f100"; }
-.flaticon-male-hair-of-head-and-face-shapes:before { content: "\f101"; }
-.flaticon-scissors-in-a-hair-salon-badge:before { content: "\f102"; }
-.flaticon-beard:before { content: "\f103"; }
-.flaticon-beauty-products:before { content: "\f104"; }
-.flaticon-healthy-lifestyle-logo:before { content: "\f105"; }
+.flaticon-handshake:before { content: "\f100"; }
+.flaticon-shield:before { content: "\f101"; }
+.flaticon-healthy-lifestyle-logo:before { content: "\f102"; }
+.flaticon-box:before { content: "\f103"; }
+.flaticon-team:before { content: "\f104"; }
+.flaticon-united:before { content: "\f105"; }
+.flaticon-hand:before { content: "\f106"; }
+.flaticon-ok-mark:before { content: "\f107"; }
+.flaticon-development:before { content: "\f108"; }
+.flaticon-idea:before { content: "\f109"; }
