--- a/css/style.css
+++ b/css/style.css
@@ -3403,7 +3403,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #007bff; }
+  background-color: #bf925b; }
 
 .nav-fill .nav-item {
   -webkit-box-flex: 1;
