--- a/css/style.css
+++ b/css/style.css
@@ -9268,12 +9268,6 @@ textarea.form-control {
   padding-top: 120px;
   padding-bottom: 120px; }
 
-#map {
-  width: 100%; }
-  @media (max-width: 991.98px) {
-    #map {
-      height: 300px; } }
-
 @-webkit-keyframes pulse {
   0% {
     -webkit-box-shadow: 0 0 0 0 rgba(191, 146, 91, 0.4); }
@@ -9926,4 +9920,18 @@ textarea.form-control {
 .mid-logo img {
   max-width: 150px;
   height: 150px;
+}
+
+.map {
+  position: relative;
+  padding-bottom: 100%;
+  height: 0;
+  overflow: hidden;
+}
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
